Bugfix, footer card overlaps foote

--- a/src/components/ActivityComponent/ActivityComponent.scss
+++ b/src/components/ActivityComponent/ActivityComponent.scss
@@ -4,8 +4,6 @@
   margin: 0 10%;
 
   .card {
-    // TODO make sure size is same and
-    height: 500px;
     padding-bottom: 20px;
 
     &:nth-child(2n) {
